fix(support): разобрали правила по ревизии 6 и закрыли служебные файлы
Режим записи - первая цифра четвёрки: 0 не редактируется, 1 редактируется с
сохранением поддержки, 2 снят. По верному разбору открылась смена режимов, а
запрет правки распространился на служебные файлы объекта.